# acceleration_firmware_zcu102

./: .gitmodules  ARTIFACTS.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cmake/: firmware_setup.cmake  generate_mixin.cmake  sdk.cmake
log/: latest_mixin
scripts/: generate_toolchain.template.sh  index.yaml.template  zcu102.mixin.template
